--- a/Aplikacija/KonacniProjekat/Pages/TuraIzmeni.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/TuraIzmeni.cshtml
@@ -22,7 +22,7 @@
     <div id="formContent">
         <input type="hidden" asp-for="@Model.TuraId" />
         <input type="hidden" asp-for="@Model.DaniOdrzavanjaPreIzmene" />
-    <label class="form-control">Naziv ture:</label> <input asp-for="OvaTura.NazivTure" class="form-control margin-input-izmena" required />
+    <label class="form-control">Naziv ture:</label>  <textarea class="form-control text-area-fit" asp-for="OvaTura.NazivTure" class="form-control margin-input-izmena" required ></textarea>
     <label class="form-control select-fit-text"><b>Trenutno se tura održava danima: @Model.VecIzabraniDaniString</b></label>
     <label class="form-control select-fit-text">Izaberite <b>sve</b> dane održavanja ove ture:</label> 
         <div class="forma-check"><input type="checkbox" name="IzabraniDani[]" value="1" /> <h6>Ponedeljak</h6> </div>
@@ -37,10 +37,10 @@
         <input type="time" class="form-control select-fit-text margin-input-izmena" asp-for="OvaTura.VremeOdrzavanja" required/>                                                   
 
     <label class="form-control">Mesto polaska:</label>     
-        <input type="text" asp-for="OvaTura.MestoPolaska" class="form-control margin-input-izmena" />                                                  
+         <textarea class="form-control text-area-fit" asp-for="OvaTura.MestoPolaska" class="form-control margin-input-izmena" ></textarea>                                                  
 
     <label class="form-control">Kapacitet:</label>    
-        <input type="number" class="form-control margin-input-izmena" min="1" max="100" asp-for="OvaTura.Kapacitet" required/>
+        <input type="number" class="form-control" min="1" max="100" asp-for="OvaTura.Kapacitet" required/>
 
     <label class="form-control select-fit-text">Vodič ove ture:</label>
         <select class="form-control select-fit-text margin-input-izmena" id="izborVodicaIzmena" asp-for="@Model.IzabraniVodic" asp-items="@Model.SviVodici" required>
@@ -77,7 +77,7 @@
     </div>           
                                                        
     <div>
-        <button type="submit">Sačuvajte izmene</button>
+        <button type="submit" class="dugme">Sačuvajte izmene</button>
     </div>                                              
     </div>
     </div>                                                
