--- a/Aplikacija/KonacniProjekat/Pages/TuraObrisi.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/TuraObrisi.cshtml
@@ -11,10 +11,9 @@
 {
   <div class="brisi-ture fadeInDown">
   <div id="formContent">
-    <label class="form-control select-fit-text" >
-            <h5>Da li ste sigurni da želite da obrišete sledeću turu: @Model.TuraZaBrisanje.NazivTure ?</h5>
-    </label>
-
+            <h5>Da li ste sigurni da želite da obrišete sledeću turu: </h5> 
+            <p class="title"> "@Model.TuraZaBrisanje.NazivTure"</p>
+            <h5>?</h5>
     <button type="submit" class="btn btn-danger">Da</button>
     <a asp-page="./TuraSve" >Ne</a>
   </div>
