--- a/Aplikacija/KonacniProjekat/Pages/ZnamenitostObrisi.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/ZnamenitostObrisi.cshtml
@@ -4,14 +4,12 @@
      ViewData["Title"]="Brisanje znamenitosti";
 }
    @if(SessionClass.TipKorisnika=="A"){
-<div class="brisi-znamenitosti fadeInDown">
+<div class="brisi-ture fadeInDown">
 <div id="formContent">
 <form method="post">
-
-    <label class="form-control select-fit-text" >
-            <h5>Da li ste sigurni da želite da obrišete sledeću znamenitosti: @Model.ZnamenitostZaBrisanje.NazivZnamenitosti ?</h5>
-    </label>
-
+            <h5>Da li ste sigurni da želite da obrišete sledeću znamenitosti:</h5>
+            <p class="title">@Model.ZnamenitostZaBrisanje.NazivZnamenitosti</p> 
+           <h5> ?</h5>
     <button type="submit" class="btn btn-danger">Da</button>
     <a asp-page="./ZnamenitostSve" >Ne</a>
 
