--- a/Aplikacija/KonacniProjekat/Pages/HallOfFame.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/HallOfFame.cshtml
@@ -21,8 +21,7 @@
 
       }
 </ul>
-<h3 style="margin-left: 50%;">@Model.trenutniKviz.NazivKviza</h3>
-
+<h3 style="margin-left: 40%;"><a  class="nav-link" href="/KvizUradi?id=@Model.trenutniKviz.IdKviza">@Model.trenutniKviz.NazivKviza</a></h3>
 <div style="overflow-y: scroll;  height: 450px;">
   <table class="table tabela-hof">  
 <thead>
