--- a/Aplikacija/KonacniProjekat/Pages/KvizUradi.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/KvizUradi.cshtml
@@ -4,6 +4,8 @@
     ViewData["Title"]="Radi kviz";
 }
 
+@if(SessionClass.TipKorisnika=="T")
+{
 @if (Model.VecJeRadioKviz != null && Model.VecJeRadioKviz != 0)
 {
      <div class="alert alert-danger" role="alert" style="text-align: center;"> <i class="fas fa-exclamation-triangle"></i> Već ste radili ovaj kviz. <i class="fas fa-exclamation-triangle"></i></div> 
@@ -111,7 +113,7 @@ else
         </div>
 
         <div>
-            <button type="submit" style=" position: relative; margin-left: 45%;">Završi kviz</button>
+            <button type="submit" class="dugme" style=" position: relative; margin-left: 45%;">Završi kviz</button>
         </div>
     }
     
@@ -135,7 +137,16 @@ else
     }   
 }
 }
-
 <div class="text-center">
     <h6 class="display-6"><a asp-page="./KvizSvi" asp-route-id="@Model.SessionId">Vrati se na listu svih kvizova</a></h6>
 </div>
+}
+else
+{
+<nav aria-label="Page navigation">
+  <ul class="pagination">
+    <li class="page-item"><a class="page-link" asp-page="./KvizSvi"><i class='fas fa-arrow-circle-left'></i>Prikaži listu kvizova</a></li>   
+  </ul>
+</nav>
+  <div class="alert alert-danger" role="alert" style="text-align: center;"><i class="fas fa-exclamation-triangle"></i> Morate biti ulogovani kao turista da bi radili kviz. <i class="fas fa-exclamation-triangle"></i></div>      
+}
