--- a/Aplikacija/KonacniProjekat/Pages/Shared/_Layout.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/Shared/_Layout.cshtml
@@ -37,7 +37,10 @@
                     <i class="fa fa-user" aria-hidden="true"></i>
               </a>
               <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="@SessionClass.SessionId">
+                @if(SessionClass.TipKorisnika=="T" || SessionClass.TipKorisnika=="V")
+                {
                 <a class="nav-link text-dark" asp-area="" asp-page="/Profil">Profil <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i></a>
+                }
                 <a class="nav-link text-dark" asp-area="" asp-page="/Odjava">Odjavi se <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i></a>
                
               </div>
