--- a/Aplikacija/KonacniProjekat/Pages/TuraDodaj.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/TuraDodaj.cshtml
@@ -77,13 +77,13 @@
          
         @if (SessionClass.TipKorisnika == "A")
         {
-          <button type="submit" asp-page-handler="Tura">
+          <button type="submit" class="dugme" asp-page-handler="Tura">
             Dodaj novu turu
           </button>
         }
         else
         {
-          <button type="submit" asp-page-handler="Rezervacija">
+          <button type="submit" class="dugme" asp-page-handler="Rezervacija">
             Kreiraj custom rezervaciju
           </button>
         }
