--- a/Aplikacija/KonacniProjekat/Pages/TuraSve.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/TuraSve.cshtml
@@ -45,7 +45,7 @@ ViewData["Title"]="Ture";
             <div class="flip-card-ture">
                 <div class="inner-ture">
                     <div class="front-ture">
-                        <h1> @tura.NazivTure  </h1> 
+                        <h2 class="text-center"> @tura.NazivTure  </h2> 
                     </div>
                     <div class="back-ture">
                         <div><a asp-page="./TuraJedna" asp-route-id="@tura.IdTure">Prikaži detalje <i class="fas fa-info-circle"></i></a></div>
