--- a/Aplikacija/KonacniProjekat/Pages/Index.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/Index.cshtml
@@ -46,27 +46,14 @@
   </div>
 
   <div id="carouselExampleCaptions" id-hidden="true" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-      <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-      <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-      <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-    </ol> 
+
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="https://avanturista.co/wp-content/uploads/2017/05/Crop-Night-shot-editorial-use-only.jpg" class="d-block w-100" alt="Niška tvrđava">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/24/Panorama_Nisa.JPG/1500px-Panorama_Nisa.JPG"style="height:550px" class="d-block w-100" alt="Niška tvrđava">
         <div class="carousel-caption d-none d-md-block">
-          <h2>Niška tvrđava</h2>
-          <h5>Niška Tvrđava je dobila svoj današnji oblik u 18. veku i nalazi se nedaleko od samog centra Niša.</h5>
+          <h2>Niš</h2>
         </div> 
       </div>
-      <div class="carousel-item">
-        <img src="https://avanturista.co/wp-content/uploads/2017/09/crop-shutterstock_645962359-1.jpg" class="d-block w-100" alt="Sićevačka klisura">
-        <div class="carousel-caption d-none d-md-block">
-          <h2>Sićevačka klisura</h2>
-          <h5>Zbog živopisnih predela i prirodnih vrednosti, sa jedinstvenom florom i faunom, Sićevačka klisura je proglašena za Park prirode II kategorije zaštite.</h5>
-        </div>
-      </div> 
-
       @foreach (var item in @Model.SveZnamenitosti)
       {
         <div class="carousel-item">
@@ -76,14 +63,6 @@
         </div>
       </div> 
       }
-      <div class="carousel-item">
-        <img src="https://avanturista.co/wp-content/uploads/2017/07/crop-shutterstock_261404501.jpg" class="d-block w-100" alt="Bubanj">
-        <div class="carousel-caption d-none d-md-block">
-          <h2>Trem – Suva Planina</h2>
-          <h5>Suva planina se nalazi na jugoistoku Srbije i čini težište trougla koji čine gradovi Niš, Pirot i Leskovac.</h5>
-        </div>
-      </div>
-    </div>
     <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="sr-only">Previous</span>
