--- a/Aplikacija/KonacniProjekat/Pages/TuraOceni.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/TuraOceni.cshtml
@@ -86,7 +86,9 @@
             </ol>
 
             <div>
-                <button class="dugme" type="submit">Oceni turu</button>
+               <div> 
+                   <button type="submit" class="dugme" style=" position: relative; margin-left: 45%;">Oceni turu</button>
+               </div>
             </div>
         </form>
     </div>
