--- a/Aplikacija/KonacniProjekat/Pages/Privacy.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/Privacy.cshtml
@@ -4,6 +4,7 @@
     ViewData["Title"] = "Privacy Policy";
 }
   <section class="contact-section bg-black">
+      <div style="display: flex; align-items:center; margin-top:10%">
             <div class="container">
                 <div class="row">
                     <div class="col-md-4 mb-3 mb-md-0">
@@ -37,5 +38,6 @@
                         </div>
                     </div>
                 </div>
+            </div>
             </div>
         </section>
