--- a/Aplikacija/KonacniProjekat/Pages/TuraJedna.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/TuraJedna.cshtml
@@ -62,7 +62,7 @@ else if (SessionClass.TipKorisnika == "A" && Model.NeispravnaTura)
         <div class="vrednost-rezAnk">@Model.Tura.NazivTure</div>
                   
         <div class="naziv-rezAnk">Dani održavanja</div>
-        @if (Model.DaniOdrzavanja != "")
+        @if (Model.DaniOdrzavanja != null && Model.DaniOdrzavanja!=" ")
         {
           <div class="vrednost-rezAnk">@Model.DaniOdrzavanja</div>
         }
@@ -265,11 +265,11 @@ else if (SessionClass.TipKorisnika == "A" && Model.NeispravnaTura)
       <h6 class="m-0 font-weight-bold text-primary">Znamenitosti u turi</h6>
     </div>
     <div class="card-body">
-		<div  style="width: 1000px; overflow-x: auto; white-space: nowrap; ">
+		<div  style="width: 100%; overflow-x: auto; white-space: nowrap; ">
         @foreach (var znamenitosti in Model.ZnamenitostiUTuri)
         {
           <a asp-page="./ZnamenitostJedna" asp-route-id="@znamenitosti.IdZnamenitosti">   
-            <img class="img-fluid rounded mb-7 mb-md-0" src="images/znamenitosti/@znamenitosti.Slika" alt="" style="width:1000px;height:600px;">
+            <img class="img-fluid rounded mb-7 mb-md-0" src="images/znamenitosti/@znamenitosti.Slika" alt="" style="height:500px;">
           </a>  
         }
         </div>
