--- a/Aplikacija/KonacniProjekat/Pages/ZnamenitostJedna.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/ZnamenitostJedna.cshtml
@@ -94,10 +94,10 @@ ViewData["Title"] = "Znamenitosti";
       </div>
       <div class="card-body">
         
-        <div  style="width: 1000px; overflow-x: auto; white-space: nowrap; ">
+        <div  style="width: 100%; overflow-x: auto; white-space: nowrap; ">
     @foreach (var slika in Model.Slike)
     {
-         <img class="img-fluid rounded mb-5 mb-md-0" src="images/znamenitosti/@slika.Slika" alt="" style="width:1000px;height:500px;">
+         <img class="img-fluid rounded mb-5 mb-md-0" src="images/znamenitosti/@slika.Slika" alt="" style="height:400px;">
     }
     </div>
     
