--- a/Aplikacija/KonacniProjekat/Pages/Profil.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/Profil.cshtml
@@ -18,7 +18,7 @@
 
   <div class="tab-content">
     <div id="podaci" class="tab-pane fade in active">
-        <div class="cardProfil" style="text-align: center;">
+        <div class="cardProfil" style="text-align: center; width: 70%;" >
             <h1>@SessionClass.ImeKorisnika</h1>
             <br/>
             <p class="title"><i class="fas fa-birthday-cake"></i> @Convert.ToString(string.Format("{0:dd/MM/yyyy}", @Model.Korisnik.IdTuristeKNavigation.DatumRodjenja))</p>
@@ -43,7 +43,6 @@
                     <th>Naziv ture</th>
                     <th>Vodič</th>
                     <th>Datum</th>
-                    <th>Vreme</th>
                 </thead>
                 <tbody>
                 <form method="get">
@@ -53,8 +52,7 @@
                             <td>@rezervacija.IdRezervacije</td>
                             <td>@rezervacija.IdTureRNavigation.NazivTure</td>
                             <td>@rezervacija.IdVodicaRNavigation.ImeVodica @rezervacija.IdVodicaRNavigation.PrezimeVodica</td>
-                            <td>@Convert.ToString(string.Format("{0:dd/MM/yyyy}", @rezervacija.Datum))</td>
-                            <td>@rezervacija.IdTureRNavigation.VremeOdrzavanja</td>
+                            <td>@rezervacija.Datum</td>
                         </tr>
                     }
                 </form>
@@ -63,7 +61,7 @@
         </div>
     </div>
     <div id="ocenjivanje" class="tab-pane fade">
-        <h3>Ocene koje ste dali vodičima</h3>   
+        <h3>Ocene koje ste dali vodicima</h3>   
         <div>
             <table class="table table-bordered">
                 <thead>
@@ -154,7 +152,6 @@ else if(SessionClass.TipKorisnika=="V")
             <th>Naziv ture</th>
             <th>ID turiste</th>
             <th>Datum</th>
-            <th>Vreme</th>
         </thead>
         <tbody>
             <form method="get">
@@ -164,8 +161,7 @@ else if(SessionClass.TipKorisnika=="V")
                         <td>@rezervacija.IdRezervacije</td>
                         <td>@rezervacija.IdTureRNavigation.NazivTure</td>
                         <td>@rezervacija.IdTuristeRNavigation.ImeTuriste @rezervacija.IdTuristeRNavigation.PrezimeTuriste</td>
-                        <td>@Convert.ToString(string.Format("{0:dd/MM/yyyy}", @rezervacija.Datum))</td>
-                        <td>@rezervacija.IdTureRNavigation.VremeOdrzavanja</td>
+                        <td>@rezervacija.Datum</td>
                     </tr>
                 }
             </form>
