--- a/Aplikacija/KonacniProjekat/Pages/RezervacijaSve.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/RezervacijaSve.cshtml
@@ -35,7 +35,14 @@ ViewData["Title"]="Rezervacije";
                             <td><a asp-page="./RezervacijaJedna" asp-route-id="@rezervacija.IdRezervacije">Prikaži detalje <i class="fas fa-calendar-day"></i></a></td>
                             @if (SessionClass.TipKorisnika == "T")
                             {
-                                <td><a asp-page="./RezervacijaOtkazi" asp-route-id="@rezervacija.IdRezervacije">Otkaži rezervaciju <i class="fas fa-calendar-times"></i></a></td>
+                                @if(@rezervacija.Datum>DateTime.Now)
+                                {
+                                    <td><a asp-page="./RezervacijaOtkazi" asp-route-id="@rezervacija.IdRezervacije">Otkaži rezervaciju <i class="fas fa-calendar-times"></i></a></td>
+                                }
+                                else
+                                {
+                                  <td></td>  
+                                }
                             }
                         </tr>
                     }
