--- a/Aplikacija/KonacniProjekat/Pages/KvizIzmeni.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/KvizIzmeni.cshtml
@@ -22,12 +22,12 @@
          <div id="formContent">
                 <input type="hidden" asp-for="KvizId" />
                 <input type="hidden" asp-for="SessionId" />
-                <label class="form-control">Naziv kviza:</label> <input asp-for="OvajKviz.NazivKviza" class="form-control" placeholder="OvajKviz.Naziv kviza" required/>
-                <label class="form-control">Znamenitost:</label>    <select class="form-control select-fit-text margin-input-izmena" asp-for="IzabranaZnamenitostString" style="display:block;" asp-items="Model.IzborZnamenitostiLista" >
+                <label class="form-control">Naziv kviza:</label> <textarea asp-for="OvajKviz.NazivKviza" class="form-control" value="OvajKviz.Naziv kviza" required></textarea>
+                <label class="form-control">Znamenitost:</label>    <select class="form-control select-fit-text" asp-for="IzabranaZnamenitostString" style="display:block;" asp-items="Model.IzborZnamenitostiLista" >
                                                                         <option value="">Bez znamenitosti</option>
                                                                         <option value="" selected disabled hidden>Izaberite za koju znamenitost je vezan kviz.</option>
                                                                     </select>
-             <label     class="form-control">Tura:</label>    <select class="form-control select-fit-text margin-input-izmena" asp-for="IzabranaTuraString" style="display:block;" asp-items="Model.IzborTuraLista" >
+             <label     class="form-control">Tura:</label>    <select class="form-control select-fit-text" asp-for="IzabranaTuraString" style="display:block;" asp-items="Model.IzborTuraLista" >
                                                                         <option value="">Bez ture</option>
                                                                         <option value="" selected disabled hidden>Izaberite za koju turu je vezan kviz.</option>
                                                                     </select>
