--- a/Aplikacija/KonacniProjekat/Pages/KvizIzmeniPitanje.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/KvizIzmeniPitanje.cshtml
@@ -20,11 +20,11 @@
             <div id="formContent">
                 <input type="hidden" asp-for="KvizId" />
                 <input type="hidden" asp-for="PitanjeId" />
-                <label class="form-control select-fit-text">Unesite novo pitanje:</label> <input asp-for="OvoPitanje.TekstPitanja" value="@Model.OvoPitanje.TekstPitanja" placeholder="@Model.OvoPitanje.TekstPitanja" />
-                <label class="form-control">Odgovor A:</label> <input asp-for="OvoPitanje.OdgovorA" value="@Model.OvoPitanje.OdgovorA" placeholder="@Model.OvoPitanje.OdgovorA" />
-                <label class="form-control">Odgovor B:</label> <input asp-for="OvoPitanje.OdgovorB" value="@Model.OvoPitanje.OdgovorB" placeholder="@Model.OvoPitanje.OdgovorB" />
-                <label class="form-control">Odgovor C:</label> <input asp-for="OvoPitanje.OdgovorC" value="@Model.OvoPitanje.OdgovorC" placeholder="@Model.OvoPitanje.OdgovorC" />
-                <label class="form-control select-fit-text">Tačan odgovor je pod:</label>   <select class="form-control select-fit-text margin-input-izmena" asp-for="IzborTacnogOdgovoraInt" required>
+                <label class="form-control select-fit-text">Unesite novo pitanje:</label> <textarea class="form-control"asp-for="OvoPitanje.TekstPitanja" value="@Model.OvoPitanje.TekstPitanja" ></textarea>
+                <label class="form-control">Odgovor A:</label> <textarea class="form-control" asp-for="OvoPitanje.OdgovorA" value="@Model.OvoPitanje.OdgovorA"></textarea>
+                <label class="form-control">Odgovor B:</label> <textarea class="form-control" asp-for="OvoPitanje.OdgovorB" value="@Model.OvoPitanje.OdgovorB"></textarea>
+                <label class="form-control">Odgovor C:</label> <textarea class="form-control" asp-for="OvoPitanje.OdgovorC" value="@Model.OvoPitanje.OdgovorC"></textarea>
+                <label class="form-control select-fit-text">Tačan odgovor je pod:</label>   <select class="form-control select-fit-text" asp-for="IzborTacnogOdgovoraInt" required>
                                                                                                     <option value="" selected disabled hidden>Izaberite koji odgovor je tačan.</option>
                                                                                                     <option value="1">A</option>
                                                                                                     <option value="2">B</option>
