--- a/Aplikacija/KonacniProjekat/Pages/VodicIzmeni.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/VodicIzmeni.cshtml
@@ -20,14 +20,18 @@ ViewData["Title"]="Izmena vodiča";
     <div class="izmeni">
         <div id="formContent">
         <input type="hidden" asp-for="VodicId"/>
-        <label class="form-control">Ime: </label> <textarea class="form-control text-area-fit" asp-for="OvajVodic.ImeVodica" class="form-control"></textarea>
-        <label class="form-control">Prezime:</label> <textarea class="form-control text-area-fit" asp-for="OvajVodic.PrezimeVodica" class="form-control" ></textarea>
+        <label class="form-control">Ime: </label> <textarea  asp-for="OvajVodic.ImeVodica" class="form-control"></textarea>
+        <label class="form-control">Prezime:</label> <textarea asp-for="OvajVodic.PrezimeVodica" class="form-control" ></textarea>
         <label class="form-control">Datum rođenja:</label> <input type="date" asp-for="OvajVodic.DatumRodjenja" class="form-control"/>
-        <label class="form-control">Pol:</label> <textarea class="form-control text-area-fit" asp-for="OvajVodic.Pol" class="from-control" ></textarea>
-        <label class="form-control">Broj telefona:</label> <textarea class="form-control text-area-fit" asp-for="OvajVodic.BrojTelefona" class="form-control" ></textarea>
-        <label class="form-control">Licenca:</label> <textarea class="form-control text-area-fit" asp-for="OvajVodic.Licenca" class="form-control" ></textarea>
-        <label class="form-control">Email:</label> <textarea class="form-control text-area-fit" asp-for="OvajVodic.Email" class="form-control" ></textarea>
-        <label class="form-control">Profilna slika:</label> <textarea class="form-control text-area-fit" asp-for="OvajVodic.Slika" class="form-control"></textarea>
+         <select asp-for="OvajVodic.Pol" placeholder="Pol" required>
+            <option value="" selected disabled hidden>Pol</option>
+            <option>Ž</option>
+            <option>M</option>
+          </select>
+        <label class="form-control">Broj telefona:</label> <textarea  asp-for="OvajVodic.BrojTelefona" class="form-control" ></textarea>
+        <label class="form-control">Licenca:</label> <textarea  asp-for="OvajVodic.Licenca" class="form-control" ></textarea>
+        <label class="form-control">Email:</label> <textarea  asp-for="OvajVodic.Email" class="form-control" ></textarea>
+        <label class="form-control">Profilna slika:</label> <textarea  asp-for="OvajVodic.Slika" class="form-control"></textarea>
         <button type="submit" class="dugme">Sačuvaj izmene</button>
         </div>
     </div>
